SERVER-15343 Advance cursor only if not at EOF already.